packages/core/src/checkbox/checkbox.element.scss
// Copyright (c) 2016-2021 VMware, Inc. All Rights Reserved.
// This software is released under MIT license.
// The full license information can be found in LICENSE in the root directory of this project.

@import './../styles/tokens/generated/index';

:host {
  --color: #{$cds-alias-object-opacity-0};
  --check-color: #{$cds-global-typography-color-100};
  --background: #{$cds-alias-object-opacity-0};
  --border-radius: #{$cds-alias-object-border-radius-100};
  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-object-border-color};
}

.input {
  width: #{$cds-global-space-7};
  height: #{$cds-global-space-7};
  position: relative;
  cursor: pointer;
}

.input::before {
  background: var(--background);
  width: #{$cds-global-space-7};
  height: #{$cds-global-space-7};
  border: var(--border);
  border-radius: var(--border-radius);
  display: inline-block;
  position: absolute;
  content: '';
}

.input::after {
  position: absolute;
  content: '';
  display: none;
  height: calc(#{$cds-global-space-3} + #{$cds-global-space-1});
  width: $cds-global-space-5;
  top: $cds-global-space-1;
  left: $cds-global-space-3;
  border-left: $cds-global-space-2 solid;
  border-bottom: $cds-global-space-2 solid;
  border-color: var(--check-color);
  border-left-color: var(--check-color);
  border-bottom-color: var(--check-color);
  border-right-color: var(--check-color);
  border-top-color: var(--check-color);
  transform: translateY($cds-global-space-3-static) rotate(-45deg);
}

:host([_indeterminate]) {
  --color: #{$cds-alias-status-neutral};
}

:host([_indeterminate]) .input:after {
  border-left: none;
  border-bottom-color: var(--color);
  display: inline-block;
  transform: translateY(0.15rem);
}

:host([_checked]) {
  --color: #{$cds-alias-status-info};
  --background: var(--color);
  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-status-info};

  .input:after {
    display: inline-block;
  }
}

:host([status='error']:not([_checked])) {
  --color: #{$cds-alias-status-danger};
  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-status-danger};
}

:host([_disabled]) {
  --color: #{$cds-alias-status-disabled-tint};
  --border: #{$cds-alias-object-border-width-100} solid #{$cds-alias-status-disabled-tint};

  .input {
    cursor: not-allowed;
  }
}

